# raytracer

./: CMakeLists.txt  README.txt  main.cpp
assets/: cuberoom_globalillum.json  custom.json  custom2.json  custom3.json  empty_room_globalillum.json  sphere_locallillum_C1.json  sphere_locallillum_C2.json  sphereroom_arealight_1.json  sphereroom_arealight_2.json  sphereroom_arealight_3.json  sphereroom_arealight_4.json  sphereroom_arealight_5.json  sphereroom_arealight_6.json  spheres_locallillum.json
src/: Geometry.cpp  Geometry.h  Light.cpp  Light.h  Output.cpp  Output.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h
